table of contents

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>NGRY</title>
 </head>
 <body>
-<h1>NGRY provides as set of NPM packages with generalized Angular components and utilities</h1>
+<h1>Generalized Angular components and utilities</h1>
+
+Explore
+
+<ul>
+    <li>
+        <a href="pkg/layouts">layouts</a>
+    </li>
+</ul>
 </body>
 </html>
